crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__replace_constraint__tests__replace_fk_on_delete@replace_fk_on_delete_MySql.snap
---
source: crates/vespertide-query/src/sql/replace_constraint.rs
description: replace FK on_delete for MySql
---
ALTER TABLE `posts` DROP FOREIGN KEY `fk_posts__fk_user`;
ALTER TABLE `posts` ADD CONSTRAINT `fk_posts__fk_user` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE
