crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__replace_constraint__tests__replace_unique_constraint@replace_unique_MySql.snap
---
source: crates/vespertide-query/src/sql/replace_constraint.rs
description: replace unique constraint for MySql
---
ALTER TABLE `users` DROP INDEX `uq_users__uq_email`;
DELETE FROM `users` WHERE `id` NOT IN (SELECT MIN(`id`) FROM `users` GROUP BY `email`);
CREATE UNIQUE INDEX `uq_users__uq_email_new` ON `users` (`email`)
